# transaction_analisis_app

./: .flake8  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
src/: config.py  decorators.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_config.py  test_decorators.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
