[project]
name = "transaction_analysis_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Alena Kislenko", email = "alena.golovleva@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry-core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
    ]